welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:1: error: type mismatch;
 found   : Int(110)
 required: Boolean
def nearHundred(n:Int): Boolean = {if (90<=n<=110 or 190<=n<=110) return true} 
                                              ^nearHundred:1: error: type mismatch;
 found   : Int(110)
 required: Boolean
def nearHundred(n:Int): Boolean = {if (90<=n<=110 or 190<=n<=110) return true} 
                                                             ^nearHundred:1: error: type mismatch;
 found   : Unit
 required: Boolean
def nearHundred(n:Int): Boolean = {if (90<=n<=110 or 190<=n<=110) return true} 
                                   ^